# NgsAMG

./: CMakeLists.txt  README  README.md  pyproject.toml  setup.py
cmake/: FindMKL.cmake  metis.cmake
cmake/cmake_modules/: FindTAU.cmake
examples/: ngs_amg_h1.py
examples/elasticity/: amg_utils.py  beam.py  beamP2.py  beamP2_petsc.py  beam_petsc.py  beam_petsc_ksp.py  drawBF.py  mcs.py  mcs2.py  mcs_utils.py  petsc_basic.py  simple.py
examples/h1/: 2d_bddc.py  2d_ho.py  2d_ho_nodalp2.py  2d_lo.py  2d_nodalp2.py  3d_bddc.py  3d_bddc_nodalp2.py  3d_ho_nodalp2.py  3d_nodalp2.py  tuning.py
examples/smoothers/: dyn_block.py  smoother_utils.py  smoothers.py
examples/stokes/: stokes_block.py  stokes_hdg.py  stokes_utils.py  tesla.py
src/: CMakeLists.txt  algebraicmesh.cpp  algebraicmesh.hpp  amg.hpp  amg_agg.hpp  amg_agg_el2d.cpp  amg_agg_el3d.cpp  amg_agg_h1scal.cpp  amg_agg_impl.hpp  amg_bla.cpp  amg_bla.hpp  amg_blocksmoother.cpp  amg_blocksmoother.hpp  amg_coarsen.cpp  amg_coarsen.hpp  amg_coarsen2.cpp  amg_coarsen_impl.hpp  amg_contract.cpp  amg_contract.hpp  amg_discard.cpp  amg_discard.hpp  amg_elast.cpp  amg_elast.hpp  amg_elast_2d.cpp  amg_elast_3d.cpp  amg_elast_impl.hpp  amg_elast_old.hpp  amg_elastipre.cpp  amg_elastipre.hpp  amg_energy.hpp  amg_energy_impl.hpp  amg_facet_aux.hpp  amg_facet_aux_impl.hpp  amg_factory.cpp  amg_factory.hpp  amg_factory_impl.hpp  amg_factory_nodal.hpp  amg_factory_nodal_impl.hpp  amg_factory_old.hpp  amg_factory_stokes.hpp  (+86 more)
src/base/: CMakeLists.txt  base.hpp  dummy_mpi_wrapper.hpp
src/base/coarsening/: CMakeLists.txt  agglomerate_map.cpp  agglomerate_map.hpp  agglomerator.cpp  agglomerator.hpp  agglomerator_impl.hpp  agglomerator_utils.hpp  base_coarse.cpp  base_coarse.hpp  dof_contract.cpp  dof_contract.hpp  dof_map.cpp  dof_map.hpp  grid_contract.cpp  grid_contract.hpp  grid_map.hpp  mis_agg.hpp  mis_agg_impl.hpp  mis_agg_map.hpp  plate_test_agg.hpp  plate_test_agg_impl.hpp  plate_test_agg_map.hpp  python_coarse.cpp  spw_agg.hpp  spw_agg_impl.hpp  spw_agg_map.hpp
src/base/distributed/: CMakeLists.txt  eqchierarchy.cpp  eqchierarchy.hpp  mpiwrap_extension.hpp  reducetable.hpp  universal_dofs.cpp  universal_dofs.hpp
src/base/factory/: CMakeLists.txt  aux_mat.hpp  base_factory.cpp  base_factory.hpp  gw_prol_impl.hpp  nodal_factory.hpp  nodal_factory_impl.hpp  vertex_factory.hpp  vertex_factory_impl.hpp
src/base/linalg/: CMakeLists.txt  bla_extension.cpp  bla_extension.hpp  dcc_map.cpp  dcc_map.hpp  dyn_block.cpp  dyn_block.hpp  dyn_block_impl.hpp  hybrid_matrix.cpp  hybrid_matrix.hpp  utils_sparseLA.cpp  utils_sparseLA.hpp  utils_sparseMM.cpp  utils_sparseMM.hpp
src/base/mesh/: CMakeLists.txt  alg_mesh.hpp  alg_mesh_nodes.hpp  base_mesh.cpp  base_mesh.hpp  base_mesh_impl.hpp
src/base/ngs_extension/: CMakeLists.txt  facet_aux_info.cpp  facet_aux_info.hpp  ncfespace.cpp  ncfespace.hpp
src/base/precond/: CMakeLists.txt  amg_pc.cpp  amg_pc.hpp  amg_pc_vertex.hpp  amg_pc_vertex_impl.hpp
src/base/python/: CMakeLists.txt  __init__.py  __init__.py.in  python_amg.cpp  python_amg.hpp
src/base/smoothers/: CMakeLists.txt  base_smoother.cpp  base_smoother.hpp  block_gssmoother.cpp  block_gssmoother.hpp  dyn_block_smoother.cpp  dyn_block_smoother.hpp  gssmoother.cpp  gssmoother.hpp  hdiv_dyn_block.cpp  hdiv_dyn_block.hpp  hybrid_base_smoother.cpp  hybrid_base_smoother.hpp  hybrid_smoother.cpp  hybrid_smoother.hpp  hybrid_smoother_utils.hpp  loc_block_gssmoother.cpp  loc_block_gssmoother.hpp  loc_block_gssmoother_impl.hpp  python_smoothers.cpp
src/base/solve/: CMakeLists.txt  LinearSolver.cpp  LinearSolver.hpp  amg_matrix.cpp  amg_matrix.hpp  python_solve.cpp
src/base/utils/: CMakeLists.txt  SpecOpt.hpp  amg_register.cpp  amg_register.hpp  amg_solver_settings.hpp  python_utils.cpp  utils.cpp  utils.hpp  utils_arrays_tables.hpp  utils_buffering.hpp  utils_denseLA.cpp  utils_denseLA.hpp  utils_io.hpp  utils_numeric_types.hpp  utils_tuples.hpp
src/elasticity/: CMakeLists.txt  elasticity.hpp  elasticity_2d.cpp  elasticity_2d_mis.cpp  elasticity_2d_spw.cpp  elasticity_3d.cpp  elasticity_3d_mis.cpp  elasticity_3d_spw.cpp  elasticity_energy.hpp  elasticity_energy_impl.hpp  elasticity_impl.hpp  elasticity_mesh.hpp  elasticity_pc_impl.hpp  python_elasticity.cpp
src/h1/: CMakeLists.txt  h1.hpp  h1_dim1.cpp  h1_dim1_agg.cpp  h1_dim2.cpp  h1_dim2_agg.cpp  h1_dim3.cpp  h1_dim3_agg.cpp  h1_energy.hpp  h1_energy_impl.hpp  h1_impl.hpp  python_h1.cpp
src/old/: amg_factory_impl_old.hpp  amg_h1_old.hpp  amg_pc_impl_old.hpp
src/stokes/: CMakeLists.txt
src/stokes/common/: CMakeLists.txt  loop_utils.cpp  loop_utils.hpp  python_stokes.hpp  stokes_energy.hpp  stokes_factory.hpp  stokes_factory_impl.hpp  stokes_map.hpp  stokes_map_impl.hpp  stokes_mesh.cpp  stokes_mesh.hpp  stokes_mesh_impl.hpp  stokes_pc.cpp  stokes_pc.hpp  stokes_pc_impl.hpp
src/stokes/hdiv/: CMakeLists.txt  hdiv_hdg_embedding.cpp  hdiv_hdg_embedding.hpp  hdiv_stokes_factory.hpp  hdiv_stokes_factory_impl.hpp  hdiv_stokes_gg_2d.cpp  hdiv_stokes_gg_2d_factory.cpp  hdiv_stokes_gg_2d_mis.cpp  hdiv_stokes_gg_2d_spw.cpp  hdiv_stokes_gg_3d.cpp  hdiv_stokes_gg_3d_factory.cpp  hdiv_stokes_gg_3d_mis.cpp  hdiv_stokes_gg_3d_spw.cpp  hdiv_stokes_mesh.hpp  hdiv_stokes_mesh_impl.hpp  hdiv_stokes_pc.hpp  hdiv_stokes_pc_impl.hpp  mesh_dofs.hpp  preserved_vectors.hpp  preserved_vectors_impl.hpp
src/stokes/ncfes/: CMakeLists.txt  nc_stokes_factory.hpp  nc_stokes_factory_impl.hpp  nc_stokes_gg_2d.cpp  nc_stokes_gg_2d_factory.cpp  nc_stokes_gg_2d_mis.cpp  nc_stokes_gg_2d_spw.cpp  nc_stokes_gg_3d.cpp  nc_stokes_gg_3d_factory.cpp  nc_stokes_gg_3d_mis.cpp  nc_stokes_gg_3d_spw.cpp  nc_stokes_mesh.hpp  nc_stokes_mesh_impl.hpp  nc_stokes_pc.hpp  nc_stokes_pc_impl.hpp
tests/: CMakeLists.txt  clean_cache.sh
tests/elasticity/: CMakeLists.txt  amg_utils.py
tests/h1/: CMakeLists.txt  amg_utils.py
tests/h1/jump/: amg_utils.py  test_2d_jump_ho.py  test_2d_jump_lo.py
tests/h1/simple/: test_2d_bddc.py  test_2d_ho.py  test_2d_lo.py  test_3d_bddc.py  test_3d_ho.py  test_vec.py
(+23 files in other folders)
